--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -50,6 +50,8 @@ jobs:
         run: |
           terraform validate -no-color
       - name: Terraform plan
+        id: plan
+        continue-on-error: true
         run: |
           terraform plan \
             -var 'project=${{ env.TF_PROJECT }}' \
@@ -59,3 +61,34 @@ jobs:
             -input=false \
             -no-color \
             -detailed-exitcode \
+      - name: Slack notify
+        uses: slackapi/slack-github-action@v1.22.0
+        with:
+          channel-id: "C05RGJ8AE0P"
+          payload: |
+            {
+              "attachments": [
+                  {
+                    "color": "#0068B7",
+                    "blocks": [
+                      {
+                        "type": "header",
+                        "text": {
+                          "type": "plain_text",
+                          "text": "Request for approve",
+                          "emoji": true
+                        }
+                      },
+                      {
+                        "type": "section",
+                        "text": {
+                          "type": "mrkdwn",
+                          "text": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                        }
+                      }
+                    ]
+                  }
+                ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
